[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["cargo", "derive"] }
itertools = "0.12.0"
# nalgebra = "0.32.3"
# num = "0.4.1"
# petgraph = "0.6.4"
# regex = "1.10.2"
